ex6/testdata/typechecker/error/ArrayTest-err4.java
class ArrayTest {
	public static void main(String[] a){
            int[] b;
            boolean c;
            b = new int[4]; 
            b[2] = c; // TE
	}
}

